<resources>
    <string name="app_name">signIn</string>
    <string name="id">user ID</string>
    <string name="prev_id">ID를 입력하세요</string>
    <string name="password">password</string>
    <string name="prev_pw">비밀번호를 입력하세요</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름</string>
    <string name="prev_name">이름을 입력하세요</string>
    <string name="gender">성별</string>
    <string name="gender_context">여자</string>
    <string name="mbti">MBTI</string>
    <string name="mbti_context">INTP</string>
    <string name="logout">로그아웃</string>
</resources>