<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/img_logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signin_logo_xhdpi"
        android:layout_marginTop="100dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/TextViewTitle"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"

        app:layout_constraintTop_toBottomOf="@+id/img_logo2"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditTextInput"
        android:hint="@string/prev_name"
        android:textColorHint="#40000000"

        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
        />

    <TextView
        android:id="@+id/tv_new_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        style="@style/TextViewTitle"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@+id/et_name"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
        />

    <EditText
        android:id="@+id/et_new_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditTextInput"
        android:hint="@string/prev_id"
        android:textColorHint="#40000000"

        app:layout_constraintTop_toBottomOf="@+id/tv_new_id"
        app:layout_constraintLeft_toLeftOf="@+id/et_name"
        />

    <TextView
        android:id="@+id/tv_new_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/TextViewTitle"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@+id/et_new_id"
        app:layout_constraintLeft_toLeftOf="@+id/tv_new_id"
        />

    <EditText
        android:id="@+id/et_new_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditTextInput"
        android:hint="@string/prev_pw"
        android:textColorHint="#40000000"
        android:inputType="textPassword"

        app:layout_constraintTop_toBottomOf="@+id/tv_new_pw"
        app:layout_constraintLeft_toLeftOf="@id/et_new_id"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_pw">

        <ImageView
            android:id="@+id/img_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:src="@drawable/happy"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_create"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_create"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"

            app:layout_constraintBottom_toBottomOf="@+id/img_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toRightOf="@+id/img_create"
            app:layout_constraintTop_toTopOf="@+id/img_create" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>