<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/signin_logo_xhdpi"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        style="@style/TextViewTitle"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"

        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditTextInput"
        android:hint="@string/prev_id"
        android:textColorHint="#40000000"

        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        app:layout_constraintLeft_toLeftOf="@+id/tv_id"
        />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/TextViewTitle"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@+id/et_id"
        app:layout_constraintLeft_toLeftOf="@id/tv_id"

        />


    <EditText
        android:id="@+id/et_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/EditTextInput"
        android:hint="@string/prev_pw"
        android:textColorHint="#40000000"

        app:layout_constraintTop_toBottomOf="@+id/tv_pw"
        app:layout_constraintLeft_toLeftOf="@+id/et_id"
        />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        style="@style/Button"
        android:layout_marginBottom="100dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/Button"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintLeft_toLeftOf="@+id/btn_sign_in"
        app:layout_constraintRight_toRightOf="@+id/btn_sign_in"

        />



<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/tiy_id"-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:layout_editor_absoluteX="1dp"-->
<!--        tools:layout_editor_absoluteY="204dp"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:layout_marginTop="0dp"-->
<!--        android:layout_marginBottom="0dp"-->

<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        >-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/id"-->

<!--            tools:layout_editor_absoluteX="0dp"-->
<!--            tools:layout_editor_absoluteY="214dp" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout"-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp"-->

<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tiy_id">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/password"-->
<!--            android:inputType="textPassword"-->
<!--            tools:layout_editor_absoluteX="0dp"-->
<!--            tools:layout_editor_absoluteY="302dp" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>