<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/img_home_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/home_logo"
        android:visibility="invisible"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_home_logo2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/home_logo2"
        android:visibility="invisible"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_home_logo3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/home_logo3"
        android:visibility="invisible"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_home_logo4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/home_logo4"
        android:visibility="invisible"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_home_logo5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/home_logo5_xhdpi"
        android:visibility="invisible"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_home_id"
        style="@style/TextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/id"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_home_logo" />

    <TextView
        android:id="@+id/tv_id_content"
        style="@style/TextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="id"

        app:layout_constraintBottom_toBottomOf="@+id/tv_home_id"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_home_id" />

    <TextView
        android:id="@+id/tv_home_name"
        style="@style/TextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/name"

        app:layout_constraintLeft_toLeftOf="@+id/tv_home_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_id" />

    <TextView
        android:id="@+id/tv_name_content"
        style="@style/TextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="이름"

        app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
        app:layout_constraintStart_toStartOf="@+id/tv_id_content"
        app:layout_constraintTop_toTopOf="@+id/tv_home_name" />

    <TextView
        android:id="@+id/tv_home_gender"
        style="@style/TextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gender"

        app:layout_constraintLeft_toLeftOf="@+id/tv_home_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_name" />

    <TextView
        android:id="@+id/tv_gender_content"
        style="@style/TextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_context"

        app:layout_constraintBottom_toBottomOf="@+id/tv_home_gender"
        app:layout_constraintStart_toStartOf="@+id/tv_name_content"
        app:layout_constraintTop_toTopOf="@+id/tv_home_gender" />

    <TextView
        android:id="@+id/tv_home_mbti"
        style="@style/TextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/mbti"

        app:layout_constraintLeft_toLeftOf="@+id/tv_home_gender"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_gender" />

    <TextView
        android:id="@+id/tv_mbti_content"
        style="@style/TextViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mbti_context"

        app:layout_constraintBottom_toBottomOf="@+id/tv_home_mbti"
        app:layout_constraintStart_toStartOf="@+id/tv_gender_content"
        app:layout_constraintTop_toTopOf="@+id/tv_home_mbti" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/selector_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/img_home_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_img_selector"
            android:layout_marginEnd="5dp"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_home_logout"
            />

        <TextView
            android:id="@+id/tv_home_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/logout"
            style="@style/ButtonText"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@+id/img_home_logout"
            app:layout_constraintBottom_toBottomOf="@+id/img_home_logout"
            app:layout_constraintLeft_toRightOf="@+id/img_home_logout"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<Button-->
    <!--android:id="@+id/btn_logout"-->
    <!--style="@style/Button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="50dp"-->
    <!--android:text="@string/logout"-->

    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent" />-->